# dad-joke-a2a-agent

./: .env.examlpe  A2A_SETUP.md  ENDPOINTS.md  ICONS.md  PROTOCOL.md  README.md  SETUP_GUIDE.md  TUNNEL_SETUP.md  agent-card.json  agent-discovery.json  agent-manifest.json  config.py  declarative-agent.json  main.py  pyproject.toml
