[project]
name = "dad-joke-agent"
version = "1.0.0"
description = "A Dad Joke agent using Microsoft 365 Agents SDK with Activity Protocol and Agent-to-Agent support"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Dad Joke Agent Team"}
]
keywords = ["microsoft-365", "agents", "bot", "dad-jokes", "copilot-studio", "agent-to-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "microsoft-agents-hosting-aiohttp>=0.1.0",
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dad-joke-agent"
Documentation = "https://github.com/yourusername/dad-joke-agent#readme"
Repository = "https://github.com/yourusername/dad-joke-agent"
Issues = "https://github.com/yourusername/dad-joke-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
